# swarm

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  pyproject.toml
docs/: architecture.md  requirements.md  skill-requirements-analysis.md
skills/requirements-analysis/: SKILL.md
swarm/: __init__.py
swarm/cli/: config.py  main.py  task.py
swarm/client/: git.py  main.py  runner.py  uploader.py  venv.py
swarm/server/: api.py  client.py  collector.py  config.py  main.py  models.py  report.py  task.py  websocket.py
tests/: test_api.py  test_client.py  test_collector.py  test_config.py  test_models.py  test_task.py
