[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm"
dynamic = ["version"]
description = "Distributed automated test execution framework based on FastAPI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mikigo", email = "mikigo@foxmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "allure-pytest>=2.13.0",
    "fastapi-self-hosting-docs>=0.1.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
swarm = "swarm.cli:main"

[project.entry-points."swarm.server"]
main = "swarm.server.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "swarm.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
